[gd_scene load_steps=36 format=2]

[ext_resource path="res://texture/enemy/fox/fox_attack/attack_front/enemy_fox_attack_front4.png" type="Texture" id=1]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_front/enemy_fox_attack_front7.png" type="Texture" id=2]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_front/enemy_fox_attack_front5.png" type="Texture" id=3]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_front/enemy_fox_attack_front6.png" type="Texture" id=4]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_front/enemy_fox_attack_front8.png" type="Texture" id=5]
[ext_resource path="res://texture/enemy/health_bar/health_box2.png" type="Texture" id=6]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_top/enemy_fox4.png" type="Texture" id=7]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_bottom/enemy_fox_walk_feet1.png" type="Texture" id=8]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_top/enemy_fox2.png" type="Texture" id=9]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_bottom/enemy_fox_walk_feet3.png" type="Texture" id=10]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_bottom/enemy_fox_walk_feet4.png" type="Texture" id=11]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_top/enemy_fox3.png" type="Texture" id=12]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_top/enemy_fox1.png" type="Texture" id=13]
[ext_resource path="res://texture/enemy/health_bar/health_box_test.png" type="Texture" id=14]
[ext_resource path="res://texture/enemy/fox/fox_walk/fox_bottom/enemy_fox_walk_feet2.png" type="Texture" id=15]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack/enemy_fox_attack1.png" type="Texture" id=16]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack/enemy_fox_attack3.png" type="Texture" id=17]
[ext_resource path="res://script/fox.gd" type="Script" id=18]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_down/enemy_fox_attack_down7.png" type="Texture" id=19]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_down/enemy_fox_attack_down8.png" type="Texture" id=20]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_down/enemy_fox_attack_down6.png" type="Texture" id=21]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_up/enemy_fox_attack_up4.png" type="Texture" id=22]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_up/enemy_fox_attack_up5.png" type="Texture" id=23]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_up/enemy_fox_attack_up6.png" type="Texture" id=24]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_down/enemy_fox_attack_down5.png" type="Texture" id=25]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack_up/enemy_fox_attack_up7.png" type="Texture" id=26]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack/enemy_fox_attack2.png" type="Texture" id=27]
[ext_resource path="res://texture/enemy/fox/fox_attack/attack/enemy_fox_attack4.png" type="Texture" id=28]
[ext_resource path="res://texture/enemy/health_bar/health_box1.png" type="Texture" id=29]
[ext_resource path="res://texture/enemy/health_bar/health_box3.png" type="Texture" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.76318, 15.5579 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack1",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 27 ), ExtResource( 17 ), ExtResource( 28 ) ],
"loop": true,
"name": "attack_run",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 26 ) ],
"loop": true,
"name": "attack0",
"speed": 15.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 19 ), ExtResource( 25 ), ExtResource( 20 ) ],
"loop": true,
"name": "attack2",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle_feet",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "attack_run_feet",
"speed": 10.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk_feet",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.50368

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.1374, 6.53289 )

[node name="fox" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2147483658
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 10

[node name="AniSpr_body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 2 )
animation = "attack0"
frame = 2

[node name="AniSpr_feet" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 3 )
animation = "idle_feet"

[node name="RayCast_sword0" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -26, -26 )
collision_mask = 4

[node name="RayCast_sword1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -26, 0 )
collision_mask = 4

[node name="RayCast_sword2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -26, 26 )
collision_mask = 4

[node name="A2D_head" type="Area2D" parent="."]
position = Vector2( 0, -14 )
collision_layer = 80
collision_mask = 116

[node name="CollisionShape2D" type="CollisionShape2D" parent="A2D_head"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="A2D_body" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 80
collision_mask = 116

[node name="CollisionShape2D" type="CollisionShape2D" parent="A2D_body"]
shape = SubResource( 5 )

[node name="HealthBar" type="Control" parent="."]
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar_under" type="TextureProgress" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 29 )
texture_progress = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 14 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateHealth" type="Tween" parent="HealthBar"]

[node name="HP_display" type="RichTextLabel" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -24, 0 )
[connection signal="animation_finished" from="AniSpr_body" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="A2D_head" to="." method="_on_A2D_head_area_entered"]
[connection signal="area_entered" from="A2D_body" to="." method="_on_A2D_body_area_entered"]
[connection signal="tween_completed" from="HealthBar/UpdateHealth" to="." method="_on_UpdateHealth_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
